--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,18 @@
     </modules>
 
 <repositories>
-<repository>
+<!--repository>
   <id>maven2-repository.java.net</id>
   <name>Java.net Repository for Maven</name>
   <url>http://download.java.net/maven/2/</url>
   <layout>default</layout>
-</repository>
+</repository-->
+        <repository>
+            <id>mbus4jRepository</id>
+            <name>mbus4j repository</name>
+            <url>http://mbus4j.sourceforge.net/repository</url>
+    </repositories>
+
 </repositories>
 
     <!-- Developers and Contributors -->
