--- a/trunk/mbus4j-master/pom.xml
+++ b/trunk/mbus4j-master/pom.xml
@@ -32,6 +32,11 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
         </dependency>
+       <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <classifier>jdk15</classifier>
+        </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>mbus4j-core</artifactId>
