--- a/trunk/mbus4j-master-ui/pom.xml
+++ b/trunk/mbus4j-master-ui/pom.xml
@@ -47,6 +47,10 @@
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
         </dependency>
+            <dependency>
+                <groupId>net.sf.atmodem4j</groupId>
+                <artifactId>spsw-native-lib-resources</artifactId>
+            </dependency>
     </dependencies>
 
     <build>
