--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -74,17 +74,17 @@
         <repository>
             <id>mbus4j.sf.net</id>
             <name>MBus4J Repository</name>
-            <url>sftp://web.sf.net:/home/project-web/mbus4j/htdocs/repository</url>
+            <url>scp://shell.sourceforge.net/home/project-web/mbus4j/htdocs/repository</url>
         </repository>
         <snapshotRepository>
             <id>mbus4j.sf.net</id>
             <name>MBus4J Snapshot Repository</name>
-            <url>sftp://web.sf.net:/home/project-web/mbus4j/htdocs/snapshot-repository</url>
+            <url>scp://shell.sourceforge.net/home/project-web/mbus4j/htdocs/snapshot-repository</url>
         </snapshotRepository>
         <site>
             <id>mbus4j.sf.net</id>
             <name>MBusV4J Site</name>
-            <url>scp://shell.sf.net:/home/project-web/mbus4j/htdocs</url>
+            <url>scp://shell.sourceforge.net/home/project-web/mbus4j/htdocs</url>
         </site>
     </distributionManagement>
 
@@ -121,6 +121,17 @@
                 <version>4.11</version>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>net.sf.atmodem4j</groupId>
+                <artifactId>spsw-java</artifactId>
+                <version>0.0.4-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>net.sf.atmodem4j</groupId>
+                <artifactId>spsw-native-lib-resources</artifactId>
+                <version>0.0.4-SNAPSHOT</version>
+            </dependency>
+            
             <!-- Sources are included... for now...
             <dependency>
                 <groupId>jssc</groupId>
@@ -164,6 +175,14 @@
 
 
     <build>
+        <extensions>
+            <!-- Enabling the use of FTP -->
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ssh</artifactId>
+                <version>2.6</version>
+            </extension>
+        </extensions>
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -186,6 +205,13 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-site-plugin</artifactId>
                     <version>3.3</version>
+                    <dependencies>
+                        <dependency><!-- add support for ssh/scp -->
+                            <groupId>org.apache.maven.wagon</groupId>
+                            <artifactId>wagon-ssh</artifactId>
+                            <version>1.0</version>
+                        </dependency>
+                    </dependencies>
                     <configuration>
                         <generateReports>${site.generateReports}</generateReports>
                         <port>${site.run.port}</port>
@@ -239,7 +265,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>appassembler-maven-plugin</artifactId>
-                    <version>1.6</version>
+                    <version>1.7</version>
                     <executions>
                         <execution>
                             <phase>package</phase> <!-- append to the packaging phase. -->
@@ -312,7 +338,7 @@
     <reporting>
         <!-- Reports Configurations -->
         <plugins>
-            <plugin>
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.9.1</version>
@@ -326,15 +352,15 @@
                     <code>javadoc:test-aggregate</code>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
-            </plugin>
-            <plugin>
+            </plugin-->
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-report-plugin</artifactId>
                 <version>2.16</version>
                 <configuration>
                     <showSuccess>true</showSuccess>
                 </configuration>
-            </plugin>
+            </plugin-->
             <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-changelog-plugin</artifactId>
@@ -343,58 +369,58 @@
                     <displayFileDetailUrl>http://svn.apache.org/viewvc%FILE%?view=markup</displayFileDetailUrl>
                 </configuration>
             </plugin-->
-            <plugin>
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-changes-plugin</artifactId>
                 <version>2.9</version>
                 <configuration>
                     <statusIds>Closed</statusIds>
                 </configuration>
-            </plugin>
-            <plugin>
+            </plugin-->
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jxr-plugin</artifactId>
-                <version>2.3</version>
+                <version>2.4</version>
                 <configuration>
                     <aggregate>true</aggregate>
                 </configuration>
-            </plugin>
-            <plugin>
+            </plugin-->
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>3.0.1</version>
                 <configuration>
                     <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
                     <linkXref>true</linkXref>
-                    <!--sourceEncoding>ISO-8859-1</sourceEncoding-->
+                    <!- -sourceEncoding>ISO-8859-1</sourceEncoding- ->
                     <minimumTokens>30</minimumTokens>
                     <targetJdk>${maven.compile.target}</targetJdk>
-                    <!--rulesets>
+                    <!- -rulesets>
                         <ruleset>/rulesets/basic.xml</ruleset>
                         <ruleset>/rulesets/imports.xml</ruleset>
                         <ruleset>/rulesets/unusedcode.xml</ruleset>
                         <ruleset>/rulesets/strictexception.xml</ruleset>
-                    </rulesets-->
+                    </rulesets- ->
                 </configuration>
-            </plugin>
-            <plugin>
+            </plugin-->
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.11</version>
                 <configuration>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
-                <!--configuration>
+                <!- -configuration>
                     <configLocation>http://svn.apache.org/repos/asf/maven/plugins/trunk/maven-checkstyle-plugin/src/main/resources/config/maven_checks.xml</configLocation>
                     <headerLocation>src/checkstyle/checkstyle-header.txt</headerLocation>
-                </configuration-->
-            </plugin>
-            <plugin>
+                </configuration- ->
+            </plugin-->
+            <!--plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <version>2.6</version>
-            </plugin>
-            <plugin>
+            </plugin-->
+            <!--plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
                 <version>2.5.3</version>
@@ -402,8 +428,8 @@
                     <effort>Max</effort>
                     <threshold>Exp</threshold>
                 </configuration>
-            </plugin>
-            <plugin>
+            </plugin-->
+            <!--plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>taglist-maven-plugin</artifactId>
                 <version>2.4</version>
@@ -416,19 +442,19 @@
                         <tag>@fixme</tag>
                     </tags>
                 </configuration>
-            </plugin>
+            </plugin-->
 
-            <plugin>
+            <!--plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>clirr-maven-plugin</artifactId>
                 <version>2.6.1</version>
-            </plugin>
+            </plugin-->
 
-            <plugin>
+            <!--plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>javancss-maven-plugin</artifactId>
                 <version>2.0</version>
-            </plugin>
+            </plugin-->
         </plugins>
     </reporting>
 
