--- a/trunk/mbus4j-core/pom.xml
+++ b/trunk/mbus4j-core/pom.xml
@@ -6,7 +6,9 @@
         <version>0.1.5-SNAPSHOT</version>
     </parent>
 
+    <groupId>net.sf.mbus4j</groupId>
     <artifactId>mbus4j-core</artifactId>
+    <version>0.1.5-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>mbus4j-core</name>
 
@@ -15,10 +17,6 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
-        <!--dependency>
-            <groupId>jssc</groupId>
-            <artifactId>jssc</artifactId>
-        </dependency-->
         
         <dependency>
             <groupId>net.sf.atmodem4j</groupId>
@@ -31,23 +29,6 @@
             <classifier>jdk15</classifier>
         </dependency>
     </dependencies>
-
-    <build>
-        <!-- Plugin Configurations -->
-        <plugins>
-            <plugin>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>jar</goal>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
 
