--- a/trunk/mbus4j-core/pom.xml
+++ b/trunk/mbus4j-core/pom.xml
@@ -30,6 +30,24 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <!-- Plugin Configurations -->
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>jar</goal>
+                            <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
 
 
