--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -100,13 +100,6 @@
                 <version>0.0.4</version>
             </dependency>
             
-            <!-- Sources are included... for now...
-            <dependency>
-                <groupId>jssc</groupId>
-                <artifactId>jssc</artifactId>
-                <version>2.9-SNAPSHOT</version>
-            </dependency>
-            -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
@@ -140,6 +133,7 @@
         <pluginManagement>
             <plugins>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.1</version>
                     <configuration>
