--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.sf.mbus4j</groupId>
@@ -5,9 +6,9 @@
     <packaging>pom</packaging>
     <version>0.1.5-SNAPSHOT</version>
     <name>mbus4j</name>
-    <url>http://maven.apache.org</url>
     <inceptionYear>2009</inceptionYear>
-
+    <url>http://mbus4j.sf.net</url>
+    
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
@@ -32,6 +33,7 @@
         <name>MBus4J</name>
         <url>http://sourceforge.net/projects/mbus4j/</url>
     </organization>
+    
     <developers>
         <developer>
             <id>apl</id>
@@ -54,14 +56,15 @@
     <!-- Licenses -->
     <licenses>
         <license>
-            <name>lesser GNU GENERAL PUBLIC LICENSE, Version 3</name>
-            <url>http://www.gnu.org/licenses/Lgpl.txt</url>
+            <name>GNU LESSER GENERAL PUBLIC LICENSE, Version 3</name>
+            <url>http://www.gnu.org/licenses/lgpl.txt</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
+    
     <issueManagement>
         <system>Sourceforge</system>
-        <url>http://sourceforge.net/tracker/?group_id=269266&amp;atid=1145513</url>
+        <url>https://sourceforge.net/tracker/?group_id=269266&amp;atid=1145513</url>
     </issueManagement>
 
     <distributionManagement>
@@ -177,7 +180,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
-                    <version>2.4</version>
+                    <version>2.4</version><!-- wait for 2.5 2.3 - 2.4 delivers corrupted jar file: META-INF/maven-->
                 </plugin>
                 <plugin>
                     <!-- mvn package appassembler:assemble -->
@@ -240,17 +243,49 @@
                         </excludes>
                     </configuration>
                 </plugin>
+                
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.9.1</version>
+                    <configuration>
+                        <source>${compile.source}</source>
+                        <target>${compile.target}</target>
+                        <encoding>${sourceEncoding}</encoding>
+                        <links>
+                            <link>http://java.sun.com/j2se/1.7.0/docs/api/</link>
+                        </links>
+                        <maxmemory>256m</maxmemory>
+                        <!--
+                        <aggregate>true</aggregate>
+                        -->
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId> 
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.2.1</version>
+                </plugin>
             </plugins>
+                
         </pluginManagement>
 
         <plugins>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>license-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
+                <artifactId>maven-resources-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -259,10 +294,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-site-plugin</artifactId>
-            </plugin>
-            <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
@@ -283,6 +314,8 @@
 
     <!-- Reporting -->
     <reporting>
+
+        <!-- Reports Configurations -->
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
